{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 370,
  "lineage": "7d61e608-edd5-5f24-2dc8-39b4e1bfe540",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c614dee691cbbf37",
            "arn": "arn:aws:ec2:us-east-1:519093654264:instance/i-0e5df14c8f4ac9e6e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e5df14c8f4ac9e6e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ruben",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c7914a24fa71bb39",
            "private_dns": "ip-10-0-1-141.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.141",
            "public_dns": "ec2-98-81-108-186.compute-1.amazonaws.com",
            "public_ip": "98.81.108.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08a0b51e6f68ba2af",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f12d130a3581232",
            "tags": {
              "Name": "Web1"
            },
            "tags_all": {
              "Name": "Web1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-067cce6263fa39649"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_http_https_outbound_allow",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.KlantA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:internet-gateway/igw-09de6f7e618872b70",
            "id": "igw-09de6f7e618872b70",
            "owner_id": "519093654264",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0f1a0025ceae891e4"
          },
          "dependencies": [
            "aws_vpc.KlantA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTableKlantA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:route-table/rtb-0245e0620a65d7a60",
            "id": "rtb-0245e0620a65d7a60",
            "owner_id": "519093654264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09de6f7e618872b70",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RouteTableKlantA"
            },
            "tags_all": {
              "Name": "RouteTableKlantA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1a0025ceae891e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.KlantA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00727de81ee7ced18",
            "route_table_id": "rtb-0245e0620a65d7a60",
            "subnet_id": "subnet-02f12d130a3581232"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.RouteTableKlantA",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.KlantA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_http_https_outbound_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:security-group/sg-067cce6263fa39649",
            "description": "Allow SSH HTTP and HTTPS",
            "egress": [],
            "id": "sg-067cce6263fa39649",
            "ingress": [],
            "name": "ssh_http_https_outbound_allow",
            "name_prefix": "",
            "owner_id": "519093654264",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh_http_https_allow"
            },
            "tags_all": {
              "Name": "ssh_http_https_allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1a0025ceae891e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.KlantA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:subnet/subnet-02f12d130a3581232",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f12d130a3581232",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "519093654264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "KlantA"
            },
            "tags_all": {
              "Name": "KlantA"
            },
            "vpc_id": "vpc-0f1a0025ceae891e4"
          },
          "dependencies": [
            "aws_vpc.KlantA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "KlantA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:vpc/vpc-0f1a0025ceae891e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-012c4ecb83c94173f",
            "default_route_table_id": "rtb-03971b8938b675b03",
            "default_security_group_id": "sg-0ac678cd5efcfda74",
            "dhcp_options_id": "dopt-0450b3d63ee435195",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f1a0025ceae891e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03971b8938b675b03",
            "owner_id": "519093654264",
            "tags": {
              "Name": "KlantA"
            },
            "tags_all": {
              "Name": "KlantA"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "Allow_Outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:security-group-rule/sgr-03982ef4bf8800a9f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03982ef4bf8800a9f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067cce6263fa39649",
            "security_group_rule_id": "sgr-03982ef4bf8800a9f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ssh_http_https_outbound_allow",
            "aws_vpc.KlantA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Allow_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:security-group-rule/sgr-00c0ef41916efca3d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-00c0ef41916efca3d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067cce6263fa39649",
            "security_group_rule_id": "sgr-00c0ef41916efca3d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ssh_http_https_outbound_allow",
            "aws_vpc.KlantA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Allow_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:security-group-rule/sgr-03a311f8d9ae4010c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-03a311f8d9ae4010c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067cce6263fa39649",
            "security_group_rule_id": "sgr-03a311f8d9ae4010c",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ssh_http_https_outbound_allow",
            "aws_vpc.KlantA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Allow_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:519093654264:security-group-rule/sgr-0899d8e531156b9ab",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0899d8e531156b9ab",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067cce6263fa39649",
            "security_group_rule_id": "sgr-0899d8e531156b9ab",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ssh_http_https_outbound_allow",
            "aws_vpc.KlantA"
          ]
        }
      ]
    }
  ]
}